--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  Feel free to ping me, I would to get in touch!
+  Feel free to ping me, I would love to get in touch!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
