--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,32 +1,23 @@
-- title: General Information
-  type: map
-  contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
-
+- title: Sidharth Tadeparti
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Master of Science(MS) in Mechanical Engineering
+      institution: Stanford University, CA, USA
+      year: 2025
+    #   description:
+    #     - Description 1.
+    #     - Description 2.
+    #     - title: Description 3.
+    #       contents:
+    #         - Sub-description 1.
+    #         - Sub-description 2.
+    - title: Bachelor of Technology(B.Tech) in Mechanical Engineering
+      institution: Indian Institute of Technology (IIT) Madras, Chennai, India
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Finished in the top 1% of the graduating class.
+
 
 - title: Experience
   type: time_table
