--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,7 +3,7 @@
   type: time_table
   contents:
     - title: Master of Science(MS) in Mechanical Engineering
-      institution: Stanford University, CA, USA
+      institution: Stanford University
       year: 2025
     #   description:
     #     - Description 1.
@@ -13,7 +13,7 @@
     #         - Sub-description 1.
     #         - Sub-description 2.
     - title: Bachelor of Technology(B.Tech) in Mechanical Engineering
-      institution: Indian Institute of Technology (IIT) Madras, Chennai, India
+      institution: Indian Institute of Technology Madras
       year: 2023
       description:
         - Finished in the top 1% of the graduating class.
@@ -22,53 +22,39 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: VC Intern
+      institution: Venture Higway
+      year: May - July 2023
+    - title: Summer Intern
+      institution: ITC Limited
+      year: May - July 2022
       description:
         - Description 1.
         - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Engineering Intern
+      institution: Caterpillar Inc
+      year: June - July 2023
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2023
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - Banco Foundation Prize
+        - Vaidy Krishnan Memorial Prize
+        - Sivasailam Merit Prize
+    - year: 2022
       items: 
-        - Max Planck Medal
+        - Honda YES Award
 
 - title: Academic Interests
   type: nested_list
@@ -85,4 +71,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Sport, Design and Reading
