--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -65,8 +65,9 @@
     - title: Robotics and Autonomous Systems
       items: 
         - Planning
+        - Learning
         - Optimal Control
-        - Automotive Systems
+        - Automotive Application
 
 
 
