--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -67,7 +67,7 @@
         - Planning
         - Learning
         - Optimal Control
-        - Automotive Application
+        - Automotive Applications
 
 
 
