--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -12,7 +12,7 @@
     #       contents:
     #         - Sub-description 1.
     #         - Sub-description 2.
-    - title: Bachelor of Technology (B.Tech) in Mechanical Engineering
+    - title: Bachelor of Technology (B.Tech) with Honors in Mechanical Engineering
       institution: Indian Institute of Technology Madras
       year: 2023
       description:
